<?xml version="1.0"?>
<package format="2">
  <name>ros_msft_loc</name>
  <version>0.0.1</version>
  <description>The ros_msft_loc package</description>
  <maintainer email="stscha@microsoft.com">Stuart Schaefer</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>ros_msft_loc_msgs</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros_msft_loc_msgs</exec_depend>

  <test_depend>rosunit</test_depend>
  <export>
  </export>
</package>
