<?xml version="1.0"?>
<package format="2">
  <name>ros_msft_loc_msgs</name>
  <version>0.0.1</version>
  <description>The winml_ros_msft_loc_msgsmsgs package</description>
  
  <maintainer email="lamadio@microsoft.com">Lou Amadio</maintainer>
  
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <depend>message_runtime</depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
